@@ -34,6 +34,12 @@ function toggle(id, only_open)
             img.src = newimg.attr('src');
             img.alt = '-';
         }
+        // if only one sub-list, open as well
+        var submenus = $(el).find("> li > ul:hidden");
+        var sublinks = $(el).find("> li > a.item, > li > a.tableicon");
+        if (submenus.length == 1 && sublinks.length == 0) {
+            toggle(submenus.prop("id").split("subel").join(""), true);
+        }
     } else {
         el.style.display = 'none';
         if (img) {
