@@ -9,6 +9,7 @@ phpMyAdmin - ChangeLog
 + Patch #3497179 Contest-5: Add user: Allow create DB w/same name + grant u_%
 + Patch #3498201 Contest-6: Export all privileges
 + Patch #3502814 for rfe #3187077 Change password buttons should match
++ rfe #3488640 Expand table-group in non-light navigation frame if only one
 
 3.5.0.0 (not yet released)
 + rfe #2021981 [interface] Add support for mass prefix change.
